updated trap force function to return either components or overall force

--- a/trap_force_analysis.ipynb
+++ b/trap_force_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -87,9 +87,10 @@
       "trap up:  tensor([[[0.0000],\n",
       "         [0.0000],\n",
       "         [0.0021]]])\n",
-      "trap force (Fx, Fy, Fz):  tensor([[[-2.4556e-05],\n",
-      "         [ 2.5921e-05],\n",
-      "         [-1.4899e-03]]], grad_fn=<CopySlices>)\n"
+      "trap force (Fx, Fy, Fz):  tensor([[[ 2.3078e-05],\n",
+      "         [-3.6380e-06],\n",
+      "         [-1.4968e-03]]], grad_fn=<CopySlices>)\n",
+      "trap force (F):  tensor([[-0.0015]], grad_fn=<SumBackward1>)\n"
      ]
     }
    ],
@@ -98,7 +99,8 @@
     "# print(\"bem pressure: \", propagate_BEM_pressure(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H))\n",
     "# print(\"gorkov potential: \", BEM_gorkov_analytical(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H))\n",
     "# can add argument of delta, defaulted to 1e-6\n",
-    "print(\"trap force (Fx, Fy, Fz): \", BEM_trap_force(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H))"
+    "print(\"trap force (Fx, Fy, Fz): \", BEM_trap_force(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H, return_components=True))\n",
+    "print(\"trap force (F): \", BEM_trap_force(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H, return_components=False))"
    ]
   }
  ],
