--- a/gorkov_analysis.ipynb
+++ b/gorkov_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "path = r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\\Nonflat-lam2.stl\"\n",
     "\n",
     "reflector = load_scatterer(path,dz=-0.05)\n",
@@ -79,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -89,18 +87,33 @@
       "trap up:  tensor([[[0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
       "         [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
       "         [0.0021, 0.0021, 0.0021, 0.0021, 0.0021]]])\n",
-      "gorkov potential:  tensor([[[-2.7205e-06],\n",
-      "         [-2.7205e-06],\n",
-      "         [-2.7205e-06],\n",
-      "         [-2.7205e-06],\n",
-      "         [-2.7205e-06]]], grad_fn=<SubBackward0>)\n"
+      "gorkov potential:  tensor([[[-2.7257e-06],\n",
+      "         [-2.7257e-06],\n",
+      "         [-2.7257e-06],\n",
+      "         [-2.7257e-06],\n",
+      "         [-2.7257e-06]]], grad_fn=<SubBackward0>)\n",
+      "gorkov potential (components):  (tensor([[[-2.7257e-06],\n",
+      "         [-2.7257e-06],\n",
+      "         [-2.7257e-06],\n",
+      "         [-2.7257e-06],\n",
+      "         [-2.7257e-06]]], grad_fn=<SubBackward0>), tensor([[[1.3673e-07],\n",
+      "         [1.3673e-07],\n",
+      "         [1.3673e-07],\n",
+      "         [1.3673e-07],\n",
+      "         [1.3673e-07]]], grad_fn=<MulBackward0>), tensor([[[2.8624e-06],\n",
+      "         [2.8624e-06],\n",
+      "         [2.8624e-06],\n",
+      "         [2.8624e-06],\n",
+      "         [2.8624e-06]]], grad_fn=<MulBackward0>))\n"
      ]
     }
    ],
    "source": [
     "print(\"trap up: \", trap_up)\n",
     "# print(\"bem pressure: \", propagate_BEM_pressure(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H))\n",
-    "print(\"gorkov potential: \", BEM_gorkov_analytical(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H))"
+    "#U = a - b\n",
+    "print(\"gorkov potential (U): \", BEM_gorkov_analytical(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H, return_components=False))\n",
+    "print(\"gorkov potential components (U, a, b)): \", BEM_gorkov_analytical(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H, return_components=True))"
    ]
   }
  ],
