added trap stiffness stuff

--- a/trap_stiffness_analysis.ipynb
+++ b/trap_stiffness_analysis.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Acoustic Trap force analysis"
+    "Acoustic Trap stiffness analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,20 +77,14 @@
       "trap up:  tensor([[[0.0000],\n",
       "         [0.0000],\n",
       "         [0.0021]]])\n",
-      "trap force (Fx, Fy, Fz):  tensor([[[-1.4438e-05],\n",
-      "         [ 6.2528e-06],\n",
-      "         [-1.4419e-03]]], grad_fn=<CopySlices>)\n",
-      "trap force (F):  tensor([[-0.0015]], grad_fn=<SumBackward1>)\n"
+      "trap stiffness:  -2.0186234687571414\n"
      ]
     }
    ],
    "source": [
     "print(\"trap up: \", trap_up)\n",
-    "# print(\"bem pressure: \", propagate_BEM_pressure(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H))\n",
-    "# print(\"gorkov potential: \", BEM_gorkov_analytical(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H))\n",
-    "# can add argument of delta, defaulted to 0.001\n",
-    "print(\"trap force (Fx, Fy, Fz): \", BEM_trap_force(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H, return_components=True))\n",
-    "print(\"trap force (F): \", BEM_trap_force(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H, return_components=False))"
+    "\n",
+    "print(\"trap stiffness: \", BEM_trap_stiffness(x,trap_up,reflector,TOP_BOARD,path=r\"C:\\Users\\Abdullah Saeed\\Documents\\BEMMedia\",H=H))"
    ]
   }
  ],
