changed wgs to gorkov_target

--- a/distance_from_surface.ipynb
+++ b/distance_from_surface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,9 @@
     "from acoustools.BEM import load_scatterer, get_cache_or_compute_H, propagate_BEM_pressure, compute_E\n",
     "from acoustools.Utilities import create_points, TOP_BOARD\n",
     "from acoustools.Solvers import wgs\n",
-    "import csv"
+    "import csv\n",
+    "from BEM_trap_force import BEM_trap_force\n",
+    "from BEM_trap_stiffness import BEM_trap_stiffness"
    ]
   },
   {
@@ -139,6 +141,13 @@
     "    plt.show()\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
